fix: improve hero display on mobile devices

--- a/Portfolio Website/assets/css/style.css
+++ b/Portfolio Website/assets/css/style.css
@@ -878,6 +878,6 @@ footer {
 
 @media (max-width: 425px) {
     #hero {
-        min-height: 100vh;
+        min-height: 100dvh;
     }
 }
